--- a/index.html
+++ b/index.html
@@ -57,12 +57,16 @@
 				</div>
 			</div>
 		</div>
-		<button class="carousel-control-prev"  type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
-			<span class="carousel-control-prev-icon dark-carousel-arrow" style="width: 40px; height: 40px;" aria-hidden="true"></span>
+		<button class="carousel-control-prev" type="button" data-bs-target="#heroCarousel" data-bs-slide="prev">
+			<span class="rounded-circle bg-dark d-flex justify-content-center align-items-center horizontally-centered">
+				<span class="carousel-control-prev-icon m-2" aria-hidden="true"></span>
+			</span>
 			<span class="visually-hidden">Previous</span>
 		</button>
 		<button class="carousel-control-next" type="button" data-bs-target="#heroCarousel" data-bs-slide="next">
-			<span class="carousel-control-next-icon dark-carousel-arrow" aria-hidden="true"></span>
+			<span class="rounded-circle bg-dark d-flex justify-content-center align-items-center horizontally-centered">
+				<span class="carousel-control-next-icon m-2" aria-hidden="true"></span>
+			</span>
 			<span class="visually-hidden">Next</span>
 		</button>
 	</div>
@@ -129,7 +133,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$1000<small class="text-muted fw-light">/business</small></h1>
-						<ul class="list-unstyled mt-3 mb-4">
+						<ul class="list-uled mt-3 mb-4">
 							<li><p class="mt-4">Up to <span class="text-muted">900,000</span> documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
