Moved language dropdown to navbar and also probably made some classes zombie classes lol

--- a/index.html
+++ b/index.html
@@ -33,6 +33,17 @@
 			</ul>
 
 			<a href="#pricing" class="btn btn-primary purchase" type="submit"><p>Get Started</p></a>
+
+
+			<div class="dropdown lang-dropdown">
+				<button class="btn btn-secondary dropdown-toggle" type="button" id="langDropdown" data-bs-toggle="dropdown" aria-expanded="false">
+					Language
+				</button>
+				<ul class="dropdown-menu" aria-labelledby="langDropdown">
+					<li><a class="dropdown-item" href="./ar/index.html">عربي</a></li>
+					<li><button class="dropdown-item" href="./index.html">English</button></li>
+				</ul>
+			</div>
 		</div>
 	</div>
 </nav>
@@ -215,18 +226,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
-</div>
-
-<div class="container p-3 sticky-bottom">
-	<div class="dropdown dropup">
-		<button class="btn btn-secondary dropdown-toggle" type="button" id="langDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-			Language
-		</button>
-		<ul class="dropdown-menu" aria-labelledby="langDropdown">
-			<li><a class="dropdown-item" href="./ar/index.html">عربي</a></li>
-			<li><button class="dropdown-item" href="./index.html">English</button></li>
-		</ul>
 	</div>
 </div>
 
