Fixed typo that makes the Basic tier list of features have bullet points LOL

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 					</div>
 					<div class="card-body">
 						<h1 class="card-title pricing-card-title">$1000<small class="text-muted fw-light">/business</small></h1>
-						<ul class="list-uled mt-3 mb-4">
+						<ul class="list-unstyled mt-3 mb-4">
 							<li><p class="mt-4">Up to <span class="text-muted">900,000</span> documents.</p></li>
 							<li><p>Unlimited users.</p></li>
 							<li><p>VPN for restricting access to employees.</p></li>
@@ -196,7 +196,7 @@
 						<h4 class="my-0 fw-normal">Custom</h4>
 					</div>
 					<div class="card-body">
-						<h1 class="card-title pricing-card-title blue-to-cyan-text">Let's talk.</small></h1>
+						<h1 class="card-title pricing-card-title blue-to-cyan-text">Let's talk.</h1>
 						<ul class="list-unstyled mt-3 mb-4">
 							<li><p class="mt-4">Amount of docs you want.</p></li>
 							<li><p>Unlimited users.</p></li>
