Fixed bug where there is a small gap in a horizontal scrollbar

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 	<link rel="icon" type="image/x-icon" href="./assets/icons/logo.svg">
 	<link rel="stylesheet" href="./css/utils.css">
 	<link rel="stylesheet" href="./index.css">
+	<script src="./js/scrollbar-width.js"></script>
 </head>
 <body class="">
 <nav class="navbar navbar-dark navbar-expand-lg sticky-top frosted-glass full-width">
