--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		</div>
 		<div class="row row-cols-1 row-cols-md-3 mb-3 text-center justify-content-center">
 			<div class="col-md-6 col-lg-6 col-xl-4 col-xxl-4">
-				<div class="card mb-4 rounded-3 shadow-sm border-primary dark-mode-pricing-card" id="customPricing">
+				<div class="card mb-4 rounded-3 shadow-sm border-secondary dark-mode-pricing-card" id="customPricing">
 					<div class="card-header py-3 text-white bg-primary border-primary">
 						<h4 class="my-0 fw-normal">Enterprise</h4>
 					</div>
